--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -34,14 +34,14 @@
         </header>
       </div>
 
-      <div id="main" role="main" class="content">
+      <div id="main" role="main" class="splash-content">
         {{ content }}
       </div>
 
       <div class="wrapper-footer">
         <div class="container">
           <footer class="footer">
-            {% include svg-icons.html %}
+            <p>© 2018 - chennai school of ai</p>
           </footer>
         </div>
       </div>
