--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
   margin: 0 auto;
   padding: 0 30px;
   width: 100%;
-  background-color: white;
+  background-color: #85f5d1;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
@@ -141,8 +141,6 @@ img {
 
 .masthead {
   padding: 20px 0;
-  border-bottom: 1px solid $lightGray;
-
   @include mobile {
     text-align: center;
   }
@@ -187,10 +185,12 @@ img {
 }
 
 .site-description {
-  margin: -5px 0 0 0;
+  margin: 3px auto !important;
   color: #666;
   font-size: 0.7em;
   font-family: Quicksand;
+  text-align: center;
+  width: 90%;
 
   @include mobile {
     margin: 3px 0;
@@ -212,18 +212,31 @@ nav {
 
   a {
     margin-left: 20px;
-    color: $darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
-    color: #7744d7;
+    color: #000;
     font-size: 12px;
 
     @include mobile {
       margin: 0 10px;
-      color: $blue;
     }
   }
+}
+
+.splash-content {
+  max-width: 740px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.splash-content p {
+  margin: 15px 0;
+  font-size: 13px;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .content {
@@ -265,7 +278,8 @@ article.post {
 
   .read-more {
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 10px;
+    color: #ff4d4d;
   }
 }
 
@@ -285,4 +299,9 @@ article.post {
 footer {
   padding: 10px 0;
   text-align: center;
+  p {
+    color: #9c9c9c;
+    font-size: 10px;
+    margin: 0px;
+  }
 }
