--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
     <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
-          {% include svg-icons.html %}
+          <p>© 2018 - chennai school of ai</p>
         </footer>
       </div>
     </div>
