--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         </header>
       </div>
 
-    <div id="main" role="main" class="content">
+    <div id="main" role="main" class="blog-content">
       {{ content }}
     </div>
 
