--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -35,7 +35,24 @@
       </div>
 
       <div id="main" role="main" class="splash-content">
-        {{ content }}
+        <div class="blog-category-box">
+          <div class="category-box">
+            <ul>
+              {% for post in site.posts %}
+              <li>
+                <a class="post-link" href="{{ site.baseurl }}{{ post.url }}">
+                  <div class='inner_box'>
+                    <img src="{{ post.image }}" />
+                    <h3>{{ post.title }}</h3>
+                    <p>{{ post.description }}</p>
+                    <p class='front-date'>{{ post.date | date_to_long_string }}</p>
+                  </div>
+                </a>
+              </li>
+              {% endfor %}
+            </ul>
+          </div>
+        </div>
       </div>
 
       <div class="wrapper-footer">
