--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -39,7 +39,7 @@
       {{ content }}
     </div>
 
-    <div class="wrapper-footer footer-relative">
+    <div class="wrapper-footer">
       <div class="container">
         <footer class="footer">
           <p>© 2018 - chennai school of ai</p>
