--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,14 +3,16 @@ layout: default
 ---
 
 <article class="post">
-  <h1>{{ page.title }}</h1>
+ 
+  <div class="cover-image" style="background-image:url('{{ page.image }}')">
+  	<div class="cover-overlay">
+  		<h1>{{ page.title }}</h1>
+  		<p class="cover-date">Written on {{ page.date | date: "%B %e, %Y" }}</p>
+  	</div>
+  </div>
 
   <div class="entry">
     {{ content }}
-  </div>
-
-  <div class="date">
-    Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
 
   {% include disqus.html %}
