--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -29,6 +29,7 @@
           </div>
 
           <nav>
+            <a href="{{ site.baseurl }}">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
