--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,17 +3,13 @@ layout: default
 ---
 
 <article class="post">
- 
-  <div class="cover-image" style="background-image:url('{{ page.image }}')">
-  	<div class="cover-overlay">
-  		<h1>{{ page.title }}</h1>
-  		<p class="cover-date">Written on {{ page.date | date: "%B %e, %Y" }}</p>
-  	</div>
-  </div>
 
-  <div class="entry">
-    {{ content }}
-  </div>
+	<h1>{{ page.title }}</h1>
+	<p class="cover-date">written on {{ page.date | date: "%B %e, %Y" }}</p>
 
-  {% include disqus.html %}
+	<div class="entry">
+		{{ content }}
+	</div>
+
+	{% include disqus.html %}
 </article>
