--- a/style.scss
+++ b/style.scss
@@ -139,19 +139,21 @@ img {
 
 .masthead {
   padding: 20px 0;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  align-items: center;
   @include mobile {
+    flex-direction: column;
     text-align: center;
   }
 }
 
 .site-avatar {
-  float: left;
   width: 100px;
   margin-right: 15px;
 
   @include mobile {
-    float: none;
-    display: block;
     margin: 0 auto;
   }
 
@@ -161,11 +163,9 @@ img {
 }
 
 .site-info {
-  float: left;
+  flex: 2;
 
   @include mobile {
-    float: none;
-    display: block;
     margin: 0 auto;
   }
 }
@@ -178,7 +178,6 @@ img {
   font-weight: 300;
   font-size: 20px;
   letter-spacing: 1px;
-  margin-top: 10px;
 }
 
 .site-description {
@@ -195,8 +194,6 @@ img {
 }
 
 nav {
-  float: right;
-  margin-top: 23px;
   font-family: $font_header;
   font-size: 18px;
 
