--- a/style.scss
+++ b/style.scss
@@ -209,7 +209,7 @@ nav {
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
-    color: #ecf393;
+    color: #fff68f;
     font-size: 12px;
 
     @include mobile {
