--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -19,7 +19,7 @@ $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
-$font_header: "Poppins" ;
+$font_header: "Nunito" ;
 $font_body: "Quicksand";
 
 // Mobile breakpoints
