--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+<head>
+  <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
 
-    {% include meta.html %}
+  {% include meta.html %}
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Poppins:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito:700" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
@@ -19,35 +19,24 @@
 
   <body>
     <div class="global-container">
-      <div class="header">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+      <nav>
+        <a href="{{ site.baseurl }}/">Home</a>
+        <a href="{{ site.baseurl }}/about">About</a>
+      </nav>
 
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
-            <a href="{{ site.baseurl }}/">Home</a>
-            <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
-        </header>
+      <div id="main" role="main" class="blog-content">
+        {{ content }}
       </div>
 
-    <div id="main" role="main" class="blog-content">
-      {{ content }}
-    </div>
-
-    <div class="wrapper-footer footer-relative">
-      <div class="container">
-        <footer class="footer">
-          <p>© 2018 - chennai school of ai</p>
-        </footer>
+      <div class="wrapper-footer footer-relative">
+        <div class="container">
+          <footer class="footer">
+            <p>© 2018 - chennai school of ai</p>
+          </footer>
+        </div>
       </div>
-    </div>
 
-    {% include analytics.html %}
-  </div>
+      {% include analytics.html %}
+    </div>
   </body>
-</html>
+  </html>
