--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,10 @@ layout: default
 
 <article class="post">
 
-	<h1>{{ page.title }}</h1>
-	<p class="cover-date">written on {{ page.date | date: "%B %e, %Y" }}</p>
+	<div class="post-header">
+		<h1>{{ page.title }}</h1>
+		<p class="cover-date">{{ page.date | date: "%B %e, %Y" }}</p>
+	</div>
 
 	<div class="entry">
 		{{ content }}
