--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -9,7 +9,7 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Poppins:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito:700" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
@@ -20,18 +20,13 @@
   <body>
     <div class="global-container">
       <div class="header">
-        <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site-avatar"><img src="{{ site.avatar }}" /></a>
-
-          <div class="site-info">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-          </div>
-
-          <nav>
+        <nav>
             <a href="{{ site.baseurl }}">Home</a>
             <a href="{{ site.baseurl }}/about">About</a>
-          </nav>
+        </nav>
+        <header class="masthead">
+          <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
+          <p class="site-description">{{ site.description }}</p>
         </header>
       </div>
 
