--- a/style.scss
+++ b/style.scss
@@ -19,10 +19,9 @@ body {
 
 .header {
   margin: 0 auto;
-  padding: 0 30px;
   width: 100%;
   background-color: #8056d4;
-  background-image: linear-gradient(62deg, #8056d4, #bd4646);
+  background-image: linear-gradient(62deg, #8056d4, #4b2a8d);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -140,9 +139,11 @@ img {
 .masthead {
   padding: 20px 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 100%;
   align-items: center;
+  justify-content: center;
+  height: 200px;
   @include mobile {
     flex-direction: column;
     text-align: center;
@@ -174,28 +175,37 @@ img {
   margin: 0;
   color: #fff;
   cursor: pointer;
-  font-family: "Poppins";
+  font-family: $font_header;
   font-weight: 300;
-  font-size: 20px;
+  font-size: 30px;
   letter-spacing: 1px;
+  text-align: center;
+  @include mobile {
+    font-size: 20px;
+  }
 }
 
 .site-description {
   margin: 3px auto !important;
   color: #fff;
   font-size: 0.7em;
-  font-family: Quicksand;
+  font-family: $font_body;
+  line-height: 1.7;
 
   @include mobile {
     margin: 3px 0;
     text-align: center;
-    width: 90%;
+    width: 75%;
   }
 }
 
 nav {
-  font-family: $font_header;
+  font-family: $font_body;
   font-size: 18px;
+  background-color: #1a192c;
+  padding: 10px;
+  padding-bottom: 15px;
+  text-align: center;
 
   @include mobile {
     float: none;
@@ -209,12 +219,18 @@ nav {
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
-    color: #fff68f;
+    color: #fff;
     font-size: 12px;
+    padding-bottom: 5px;
+    transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
 
     @include mobile {
       margin: 0 10px;
     }
+  }
+
+  a:hover {
+    border-bottom: 1px solid white;
   }
 }
 
@@ -280,13 +296,23 @@ article.page {
 
 .post h1 {
   font-size: 30px;
-  padding-left: 20px;
-  padding-top: 20px;
+  line-height: 1.2;
+  text-align: center;
+  color: white;
+}
+
+.post-header {
+  padding: 30px;
+  margin: 0 auto;
+  width: 100%;
+  background-color: #8056d4;
+  background-image: linear-gradient(62deg, #8056d4, #4b2a8d);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .wrapper-footer {
-  position: fixed;
-  background-color: #292929;
+  position: relative;
+  background-color: #1a192c;
   width: 100%;
   bottom: 0;
 
@@ -353,15 +379,8 @@ footer {
 
 .cover-date {
   font-size: 13px;
-  padding-left: 20px;
-  color: #b7b7b7;
-  margin-top: 5px;
-  margin-bottom: 20px;
-
-  @include mobile {
-    font-size: 13px;
-    padding-left: 20px;
-  }
+  color: #ffffff4f;
+  text-align: center;
 }
 
 .entry li {
