--- a/style.scss
+++ b/style.scss
@@ -311,7 +311,7 @@ article.page {
 }
 
 .wrapper-footer {
-  position: relative;
+  position: fixed;
   background-color: #1a192c;
   width: 100%;
   bottom: 0;
