--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -10,7 +10,7 @@
     <![endif]-->
 
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito:700" rel="stylesheet">
-
+    <meta name="theme-color" content="#1a192c" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
