--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 @import "highlights";
 @import "svg-icons";
 @import "splash";
+@import "speakers";
 
 html {
   font-size: 100%;
@@ -143,8 +144,9 @@ img {
   width: 100%;
   align-items: center;
   justify-content: center;
-  height: 200px;
+  height: 350px;
   @include mobile {
+    height: 200px;
     flex-direction: column;
     text-align: center;
   }
@@ -234,16 +236,11 @@ nav {
 }
 
 .blog-content {
-  max-width: 740px;
-  margin: 20px auto;
-  @include mobile {
-    margin: 0px auto;
-  }
+  width: 100%;
 }
 
 article.post {
-  background-color: white;
-  margin: 20px;
+  background-color: #f2f2f2;
   border-radius: 10px;
   @include mobile {
     margin: 0px;
@@ -286,6 +283,9 @@ article.page {
     padding: 20px;
     background-color: white;
     border-radius: 10px;
+    max-width: 740px;
+    margin: 20px auto;
+    margin-bottom: 80px;
     @include mobile {
         border-radius: 0px;
     }
@@ -296,19 +296,29 @@ article.page {
   line-height: 1.2;
   text-align: center;
   color: white;
+  width: 60%;
 
   @include mobile {
+    width: 80%;
     font-size: 20px;
   }
 }
 
 .post-header {
+  height: 350px;
   padding: 30px;
   margin: 0 auto;
   width: 100%;
   background-color: #8056d4;
   background-image: linear-gradient(62deg, #8056d4, #4b2a8d);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  @include mobile {
+    height: 200px;
+  }
 }
 
 .wrapper-footer {
@@ -375,13 +385,27 @@ footer {
 }
 
 .entry {
-  padding: 20px;
+  max-width: 740px;
+  padding: 20px 30px;
+  margin: 0 auto;
+  margin-top: -75px;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin-bottom: 50px;
+  @include mobile {
+    margin-top: 0px;
+  }
 }
 
 .cover-date {
-  font-size: 13px;
-  color: #ffffff4f;
+  font-size: 10px;
+  color: #000000;
   text-align: center;
+  background-color: #ffff5d;
+  border-radius: 5px;
+  padding: 5px 10px;
+  font-weight: bold;
 
   @include mobile {
     margin: 5px;
