--- a/_layouts/speakers.html
+++ b/_layouts/speakers.html
@@ -24,18 +24,12 @@
         <a href="{{ site.baseurl }}/speakers">Speakers</a>
         <a href="{{ site.baseurl }}/about">About</a>
       </nav>
-      <div class="header">
-        <header class="masthead clearfix">
-            <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
-            <p class="site-description">{{ site.description }}</p>
-        </header>
-      </div>
 
     <div id="main" role="main" class="blog-content">
       {{ content }}
     </div>
 
-    <div class="wrapper-footer">
+    <div class="wrapper-footer footer-fixed">
       <div class="container">
         <footer class="footer">
           <p>© 2018 - chennai school of ai</p>
