--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -22,6 +22,7 @@
       <div class="header">
         <nav>
             <a href="{{ site.baseurl }}">Home</a>
+            <a href="{{ site.baseurl }}/speakers">Speakers</a>
             <a href="{{ site.baseurl }}/about">About</a>
         </nav>
         <header class="masthead">
