--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -1,35 +1,3 @@
-
-//
-// VARIABLES
-//
-
-// Colors
-$blue: #4183C4;
-
-// Grays
-$black: #000;
-$darkerGray: #222;
-$darkGray: #333;
-$gray: #666;
-$lightGray: #eee;
-$white: #fff;
-
-// Font stacks
-$helvetica: Helvetica, Arial, sans-serif;
-$helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$georgia: Georgia, serif;
-
-// Mobile breakpoints
-@mixin mobile {
-  @media screen and (max-width: 640px) {
-    @content;
-  }
-}
-
-.blog-category-box {
-
-}
-
 .blog-category-box ul {
 	margin: 0px !important;
     display: flex;
@@ -118,9 +86,9 @@ $georgia: Georgia, serif;
 }
 
 .category-wrapper h1 span {
-    background-color: #fff68f;
+    background-color: #ffff5d;
     padding: 5px 10px;
     border-radius: 5px;
-    color: #404040;
+    color: #000;
     font-size: 12px;
 }
