--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
     <div class="global-container">
       <nav>
         <a href="{{ site.baseurl }}/">Home</a>
-        <a href="{{ site.baseurl }}/speakers">Speakers</a>
+        <a href="{{ site.baseurl }}/profs">Profs</a>
         <a href="{{ site.baseurl }}/about">About</a>
       </nav>
 
