--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -108,3 +108,7 @@
   font-weight: bold;
   border-radius: 5px;
 }
+
+.btn_catcher:hover {
+  box-shadow: 0 5px 9px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
