--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -26,10 +26,15 @@
     text-align: center;
     transition: 0.2s ease-in;
     display: flex;
+    transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
     @include mobile {
     	width: 100%;
     	margin: 10px 0;
     }
+}
+
+.blog-category-box .inner_box:hover {
+	box-shadow: 0 5px 9px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .blog-category-box .inner_box h3 {
