--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -38,7 +38,7 @@
       <div class="wrapper-footer">
         <div class="container">
           <footer class="footer">
-            <p>© 2018 - chennai school of ai</p>
+            <p>© 2018 - chennai school of ai | made with ❤️ & <a href="https://jekyllrb.com/" target="_blank">jekyll</a></p>
           </footer>
         </div>
       </div>
