--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -20,11 +20,15 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 10px;
-  height: 320px;
+  transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
   @include mobile {
     width: 160px;
     margin: 10px;
   }
+}
+
+.blog-category-box .speakers_box:hover {
+  box-shadow: 0 5px 9px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 .blog-category-box .speakers_box h3 {
@@ -87,8 +91,8 @@
 }
 
 .speakers_circle {
-  height: 120px;
-  width: 120px;
+  height: 100px;
+  width: 100px;
   border-radius: 50%;
   background-repeat: no-repeat;
   background-size: cover;
