--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -65,9 +65,8 @@
 .splash-content {
   max-width: 740px;
   margin: 5px auto;
-  padding: 20px;
   background-color: #f2f2f2;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .splash-content p {
@@ -96,4 +95,8 @@
     border-radius: 5px;
     color: #000;
     font-size: 12px;
+}
+
+.padding-box {
+	padding: 20px;
 }
