--- a/_layouts/profs.html
+++ b/_layouts/profs.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{% if page.title %}{{ page.title }} – {% endif %}{{ site.name }} – {{ site.description }}</title>
+    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.name }} | {{ page.description }}</title>
 
     {% include meta.html %}
 
     <!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-
+    
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito:700" rel="stylesheet">
     <meta name="theme-color" content="#1a192c" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
