--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,16 +3,15 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
 
-    {% if page.excerpt %}
-    <meta name="description" content="{{ page.excerpt| strip_html }}" />
-    <meta property="og:description" content="{{ page.excerpt| strip_html }}" />
-    {% else %}
-    <meta name="description" content="{{ site.description }}">
-    <meta property="og:description" content="{{ site.description }}" />
-    {% endif %}
-    <meta name="author" content="{{ site.name }}" />
-
-    {% if page.title %}
-    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ post.title }}{% endif %}" />
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+    <meta property="og:description" content="{{ page.description }}" />
     <meta property="twitter:title" content="{{ page.title }}" />
-    {% endif %}
+
+    <meta property="og:image" content="{{ page.featureimage }}"/>
+    <meta property="og:image:width" content="180" />
+    <meta property="og:image:height" content="110" />
+
+    <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ post.title }}{% endif %}">
+    <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ post.description }}{% endif %}">
+    <meta name="twitter:image" content="{% if page.featureimage %}{{ page.featureimage }}{% else %}{{ post.featureimage }}{% endif %}">
