added first blog post

--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -36,7 +36,7 @@
         {{ content }}
       </div>
 
-      <div class="wrapper-footer">
+      <div class="wrapper-footer footer-relative">
         <div class="container">
           <footer class="footer">
             <p>© 2018 - chennai school of ai | made with ❤️ & <a href="https://jekyllrb.com/" target="_blank">jekyll</a></p>
