added first blog post

--- a/style.scss
+++ b/style.scss
@@ -476,3 +476,8 @@ img.typical-image {
   padding: 30px !important;
   background-color: lightseagreen;
 }
+
+.cover-author {
+  margin: 5px 0;
+  color: #cccccc;
+}
