--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -23,7 +23,7 @@
         <a href="{{ site.baseurl }}/profs">Profs</a>
         <a href="{{ site.baseurl }}/about">About</a>
       </nav>
-      <div class="header">
+      <div class="header about-header">
         <header class="masthead clearfix">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
             <p class="site-description">{{ site.description }}</p>
