--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -21,6 +21,7 @@
   flex-direction: column;
   padding-bottom: 10px;
   transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
+  border: 1px solid #e7e7e7;
   @include mobile {
     margin: 10px;
   }
