--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -27,6 +27,7 @@
     transition: 0.2s ease-in;
     display: flex;
     transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
+    border: 1px solid #e7e7e7;
     @include mobile {
     	width: 100%;
     	margin: 10px 0;
@@ -46,7 +47,6 @@
 
 .blog-category-box .inner_box p {
 	margin: 10px 0;
-    font-size: 12px;
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 3;
@@ -63,11 +63,12 @@
 }
 
 .splash-content {
-  max-width: 740px;
+  max-width: 800px;
   margin: 5px auto;
-  background-color: #f2f2f2;
   margin-bottom: 50px;
-  overflow: hidden;
+  @include mobile {
+    max-width: 95%;
+  }
 }
 
 .splash-content p {
@@ -80,9 +81,13 @@
 }
 
 .splash-content h1 {
-    margin: 20px 0;
-    text-align: center;
-    font-size: 1.3em;
+    text-align: left;
+    font-size: 20px;
+    color: #313131;
+    padding-left: 50px;
+    @include mobile {
+        padding-left: 20px;
+    }
 }
 
 .blog-category-box .inner_box .post-box {
@@ -100,4 +105,12 @@
 
 .padding-box {
 	padding: 20px;
+}
+
+.category-wrapper {
+    margin: 15px 0;
+    background-color: whitesmoke;
+    border-radius: 5px;
+    box-shadow: 0 1px 8px 0 rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12);
+    padding: 30px 0;
 }
