--- a/style.scss
+++ b/style.scss
@@ -15,8 +15,12 @@ html {
 
 body {
 	background: #f2f2f2;
-  font: 18px/1.4 $font_body;
+  font-family: $font_body;
   color: $darkGray;
+  background-color: #4a2b8a;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%234a2b8a'/%3E%3Cstop offset='1' stop-color='%2342267b'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%237644dc' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%237644dc' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%237644dc' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%237644dc' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 hr {
@@ -33,9 +37,27 @@ hr {
 .header {
   margin: 0 auto;
   width: 100%;
-  background-color: #8056d4;
-  background-image: linear-gradient(62deg, #8056d4, #4b2a8d);
+  background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  background-image: url("https://drive.google.com/uc?id=1pOY_74aCOcVdSDavMadb72c9iLKxgrss");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 500px;
+  @include mobile {
+    height: auto;
+  }
+}
+
+.about-header {
+  height: auto !important;
+}
+
+.first-category {
+  margin-top: -250px; 
+  z-index: 1000;
+  @include mobile {
+    margin-top: 20px;
+  }
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -73,7 +95,11 @@ h4 {
 
 p {
   margin: 15px 0;
-  font-size: 13px;
+  font-size: 15px;
+  line-height: 1.4;
+  @include mobile {
+    font-size: 13px;
+  }
 }
 
 a {
@@ -89,6 +115,14 @@ ul, ol {
 
 ul {
   list-style-type: disc;
+}
+
+li {
+  font-size: 15px;
+  line-height: 1.4;
+  @include mobile {
+    font-size: 13px;
+  }
 }
 
 ol {
@@ -146,7 +180,6 @@ img {
 .global-container {
     height: 100%;
     width: 100%;
-    background-color: #f2f2f2;
 }
 
 .masthead {
@@ -253,10 +286,12 @@ nav {
 
 article.post {
   background-color: #f2f2f2;
-  border-radius: 10px;
+  border-radius: 0px;
+  padding-bottom: 50px;
   @include mobile {
     margin: 0px;
     border-radius: 0px;
+    padding-bottom: 0px;
   }
 }
 
@@ -297,7 +332,7 @@ article.page {
     border-radius: 10px;
     max-width: 740px;
     margin: 20px auto;
-    margin-bottom: 80px;
+    margin-bottom: 100px;
     @include mobile {
       margin: 0px auto;
       border-radius: 0px;
@@ -339,6 +374,7 @@ article.page {
   background-color: #1a192c;
   width: 100%;
   bottom: 0;
+  padding: 10px 0;
 
   @include mobile {
     position: relative;
@@ -398,7 +434,7 @@ footer {
 }
 
 .entry {
-  max-width: 740px;
+  max-width: 800px;
   padding: 20px 30px;
   margin: 0 auto;
   margin-top: -45px;
@@ -426,10 +462,6 @@ footer {
   @include mobile {
     margin: 5px;
   }
-}
-
-.entry li {
-  font-size: 13px;
 }
 
 .entry ul {
