--- a/style.scss
+++ b/style.scss
@@ -234,7 +234,7 @@ img {
 
 .site-description {
   margin: 3px auto !important;
-  color: #fff;
+  color: #c3c3c3;
   font-size: 0.7em;
   font-family: $font_body;
   line-height: 1.7;
