--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -21,7 +21,7 @@
   flex-direction: column;
   padding-bottom: 10px;
   transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
-  border: 1px solid #e7e7e7;
+  box-shadow: 0 0 1px 1px rgba(20,23,28,.1), 0 3px 1px 0 rgba(20,23,28,.1);
   @include mobile {
     margin: 10px;
   }
@@ -59,35 +59,8 @@
   flex-direction: column;
 }
 
-.speakers_entry {
-  margin-top: 20px;
-  margin-bottom: 50px;
-  @include mobile {
-    border-radius: 0 !important;
-    box-shadow: none !important;
-    background-color: #f2f2f2 !important;
-  }
-}
-
-.speaker_social {
-  display: flex;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.speaker_social img {
-  height: 15px !important;
-  width: 15px !important
-}
-
 .footer-fixed {
   position: fixed !important;
-}
-
-.page_description {
-  color: #ffffffa8;
-  text-align: center;
 }
 
 .speakers_circle {
