--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -21,7 +21,7 @@
   flex-direction: column;
   padding-bottom: 10px;
   transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
-  border: 1px solid #e7e7e7;
+  box-shadow: 0 0 1px 1px rgba(20,23,28,.1), 0 3px 1px 0 rgba(20,23,28,.1);
   @include mobile {
     width: 160px;
     margin: 10px;
@@ -66,7 +66,6 @@
   @include mobile {
     border-radius: 0 !important;
     box-shadow: none !important;
-    background-color: #f2f2f2 !important;
   }
 }
 
@@ -87,7 +86,7 @@
 }
 
 .page_description {
-  color: #ffffffa8;
+  color: #343434;
   text-align: center;
 }
 
