--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
       <div class="wrapper-footer footer-relative">
         <div class="container">
           <footer class="footer">
-            <p>© 2018 - chennai school of ai</p>
+            <p>© 2018 - chennai school of ai | made with ❤️ & <a href="https://jekyllrb.com/" target="_blank">jekyll</a></p>
           </footer>
         </div>
       </div>
