--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -86,7 +86,7 @@
 }
 
 .page_description {
-  color: #343434;
+  color: #a3a3a3;
   text-align: center;
 }
 
@@ -105,7 +105,7 @@
 
 .btn_catcher {
   width: auto;
-  background-color: #ffff5d;
+  background-color: #fffa7e;
   color: black;
   padding: 10px 15px;
   font-size: 12px;
