--- a/_layouts/profs.html
+++ b/_layouts/profs.html
@@ -11,7 +11,7 @@
     
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito:700" rel="stylesheet">
-    <meta name="theme-color" content="#1a192c" />
+    <meta name="theme-color" content="#1c1c1c" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
