dark theme changes

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -13,7 +13,7 @@
 .blog-category-box .blog_box {
   width: 250px;
   border-radius: 5px;
-  background-color: #fff;
+  background-color: #121111;
   margin: 15px;
   text-align: center;
   transition: 0.2s ease-in;
