--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -21,7 +21,7 @@
 .blog-category-box .inner_box {
 	width: 500px;
     border-radius: 5px;
-    background-color: #fff;
+    background-color: #121111;
     margin: 15px;
     text-align: center;
     transition: 0.2s ease-in;
@@ -43,6 +43,7 @@
     font-size: 15px;
     margin: 10px 0;
     text-align: left;
+    color: #c7c6c9;
     @include mobile {
         font-size: 13px;
     }
@@ -54,7 +55,7 @@
     display: -webkit-box;
     -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
-    color: #7c7979;
+    color: #6d6d6d;
     padding: 0px 10px;
     text-align: left;
     @include mobile {
@@ -63,7 +64,7 @@
 }
 
 .blog-category-box .inner_box .front-date {
-	color: lightgray;
+	color: #6b6b6b;
 	font-size: 10px;
 	text-align: right;
 }
@@ -73,7 +74,8 @@
   margin: 5px auto;
   margin-bottom: 50px;
   @include mobile {
-    max-width: 95%;
+    max-width: 100%;
+    margin: 0px auto;
   }
 }
 
@@ -89,7 +91,7 @@
 .splash-content h1 {
     text-align: left;
     font-size: 20px;
-    color: #313131;
+    color: #ccd0d0;
     padding-left: 15px;
     @include mobile {
         padding-left: 0px;
@@ -115,8 +117,14 @@
 
 .category-wrapper {
     margin: 15px 0;
-    background-color: white;
+    background-color: #1c1c1c;
     border-radius: 4px;
     box-shadow: 0 1px 8px 0 rgba(0,0,0,.2), 0 3px 4px 0 rgba(0,0,0,.14), 0 3px 3px -2px rgba(0,0,0,.12);
     padding: 30px 0;
+    @include mobile {
+        margin: 0px;
+        box-shadow: none;
+        border-bottom: 1px solid #ffffff30;
+        border-radius: 0px;
+    }
 }
