--- a/style.scss
+++ b/style.scss
@@ -14,21 +14,22 @@ html {
 }
 
 body {
-	background: #f2f2f2;
+	background: #121111;
   font-family: $font_body;
   color: $darkGray;
   background-attachment: fixed;
 }
 
 hr {
-  border-color: #f4f4f438;
+  border-color: #f4f4f412;
   margin: 25px 0;
 }
 
 .note {
-  background-color: #f5f0ff;
+  background-color: #2c2c2c;
   padding: 10px;
   margin: 20px 0;
+  border-radius: 4px;
 }
 
 .header {
@@ -36,6 +37,7 @@ hr {
   width: 100%;
   background-color: #2c2c2c;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  background-image: linear-gradient(-172deg, #822892, #25675f);
 }
 
 .about-header {
@@ -65,6 +67,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 30px;
+  color: #b5b5b5;
   a {
     color: inherit;
   }
@@ -76,6 +79,7 @@ h2 {
 
 h3 {
   font-size: 20px;
+  color: #b5b5b5;
 }
 
 h4 {
@@ -87,13 +91,14 @@ p {
   margin: 15px 0;
   font-size: 15px;
   line-height: 1.4;
+  color: #939393;
   @include mobile {
     font-size: 13px;
   }
 }
 
 a {
-  color: #e42828;
+  color: #b049ff;
   text-decoration: none;
 	cursor: pointer;
 }
@@ -105,6 +110,7 @@ ul, ol {
 
 ul {
   list-style-type: disc;
+  color: #939393;
 }
 
 li {
@@ -210,7 +216,7 @@ img {
 
 .site-name {
   margin: 0;
-  color: #d0d0d0;
+  color: #ededed;
   cursor: pointer;
   font-family: $font_header;
   font-weight: 300;
@@ -224,7 +230,7 @@ img {
 
 .site-description {
   margin: 3px auto !important;
-  color: #a3a3a3;
+  color: #b3b3b3;
   font-size: 15px;
   font-family: "Quicksand";
   line-height: 1.7;
@@ -240,7 +246,7 @@ img {
 nav {
   font-family: $font_body;
   font-size: 18px;
-  background-color: #1c1c1c;
+  background-color: #121111;
   padding: 10px;
   padding-bottom: 15px;
   text-align: center;
@@ -318,7 +324,7 @@ article.post {
 
 article.page {
     padding: 20px;
-    background-color: white;
+    background-color: #1c1c1c;
     border-radius: 10px;
     max-width: 740px;
     margin: 20px auto;
@@ -333,7 +339,7 @@ article.page {
   font-size: 25px;
   line-height: 1.2;
   text-align: center;
-  color: #d0d0d0;
+  color: #ededed;
   width: 50%;
 
   @include mobile {
@@ -348,6 +354,7 @@ article.page {
   margin: 0 auto;
   width: 100%;
   background-color: #2c2c2c;
+  background-image: linear-gradient(-172deg, #822892, #25675f);
   box-shadow: 0 5px 9px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   display: flex;
   flex-direction: column;
@@ -360,7 +367,7 @@ article.page {
 
 .wrapper-footer {
   position: fixed;
-  background-color: #1c1c1c;
+  background-color: #000000;
   width: 100%;
   bottom: 0;
   padding: 10px 0;
@@ -427,7 +434,7 @@ footer {
   padding: 20px 30px;
   margin: 0 auto;
   margin-top: -45px;
-  background-color: white;
+  background-color: #1c1c1c;
   border-radius: 5px;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 3px 3px -2px rgba(0, 0, 0, 0.12);
   margin-bottom: 50px;
@@ -500,14 +507,22 @@ img.typical-image {
 
 .cover-author {
   margin: 5px 0;
-  color: #a3a3a3;
+  color: #b3b3b3;
 }
 
 .category-header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   padding-left: 20px;
+}
+
+.category-header .category-description {
+  padding-left: 15px;
+  width: 95%;
+  color: #717171;
+  @include mobile {
+    padding-left: 0px;
+    width: 90%;
+    display: block;
+  }
 }
 
 .category-blog {
