--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -30,6 +30,7 @@
 
 .blog-category-box .speakers_box:hover {
   box-shadow: 0 5px 9px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  background-color: #000000;
 }
 
 .blog-category-box .speakers_box h3 {
