--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,8 @@ hr {
   width: 100%;
   background-color: #2c2c2c;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  background-image: linear-gradient(-172deg, #822892, #25675f);
+  //background-image: linear-gradient(-172deg, #822892, #25675f);
+  background-image: url("/images/bg.png");
 }
 
 .about-header {
@@ -98,7 +99,7 @@ p {
 }
 
 a {
-  color: #b049ff;
+  color: #985ec5;
   text-decoration: none;
 	cursor: pointer;
 }
@@ -355,6 +356,7 @@ article.page {
   width: 100%;
   background-color: #2c2c2c;
   background-image: linear-gradient(-172deg, #822892, #25675f);
+  background-image: url("/images/bg.png");
   box-shadow: 0 5px 9px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   display: flex;
   flex-direction: column;
