--- a/_layouts/profs.html
+++ b/_layouts/profs.html
@@ -10,7 +10,7 @@
     <![endif]-->
     
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito" rel="stylesheet">
     <meta name="theme-color" content="#121111" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
@@ -33,7 +33,7 @@
     <div class="wrapper-footer footer-fixed">
       <div class="container">
         <footer class="footer">
-          <p>© 2018 - chennai school of ai</p>
+          <p>© 2018 - chennai school of ai | made with ❤️ & <a href="https://jekyllrb.com/" target="_blank">jekyll</a></p>
         </footer>
       </div>
     </div>
