--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -10,7 +10,7 @@
     <![endif]-->
     
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito:700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand|Nunito" rel="stylesheet">
     <meta name="theme-color" content="#121111" />
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
@@ -24,7 +24,9 @@
             <a href="{{ site.baseurl }}/profs">Profs</a>
             <a href="{{ site.baseurl }}/about">About</a>
         </nav>
+        
         <header class="masthead">
+          <div id="particles-js"></div>
           <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
           <p class="site-description">{{ site.description }}</p>
         </header>
@@ -44,5 +46,11 @@
 
       {% include analytics.html %}
     </div>
+    <script src="js/particles.js"></script>
+    <script>
+      particlesJS.load('particles-js', 'js/particles.json', function() {
+        console.log('callback - particles.js config loaded');
+      });
+    </script>
   </body>
   </html>
