--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
 	<div class="post-header">
 		<h1>{{ page.title }}</h1>
-		<p class="cover-author">written by Gogul Ilango</p>
+		<p class="cover-author">{% if page.venue %}{{ page.venue }}{% else %} by {{ page.author }}{% endif %}</p>
 		<p class="cover-date">{{ page.date | date: "%B %e, %Y" }}</p>
 	</div>
 
