--- a/_sass/_splash.scss
+++ b/_sass/_splash.scss
@@ -39,12 +39,24 @@
     background-color: #000000;
 }
 
+.blog-category-box .inner_box h5 {
+    padding: 0 10px;
+    font-size: 14px;
+    font-weight: 100;
+    text-align: left;
+    color: #9e9e9e;
+    @include mobile {
+        font-size: 11px;
+    }
+}
+
 .blog-category-box .inner_box h3 {
     padding: 0 10px;
     font-size: 17px;
     margin: 10px 0;
     text-align: left;
     color: #c7c6c9;
+    margin-bottom: 0px;
     @include mobile {
         font-size: 13px;
     }
