added modal for images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,5 +38,6 @@
 
       {% include analytics.html %}
     </div>
+    <script type="text/javascript" src="/js/custom.js"></script>
   </body>
   </html>
