--- a/style.scss
+++ b/style.scss
@@ -450,7 +450,7 @@ footer {
   padding: 20px 30px;
   margin: 0 auto;
   margin-top: 20px;
-  background-color: #121111;
+  background-color: #1c1c1c;
   border-radius: 5px;
   margin-bottom: 50px;
   @include mobile {
