--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,6 @@ layout: default
 ---
 
 <article class="post">
-
 	<div class="post-header">
 		<h1>{{ page.title }}</h1>
 		<p class="cover-author">{% if page.venue %}{{ page.venue }}{% else %} by {{ page.author }}{% endif %}</p>
@@ -14,6 +13,10 @@ layout: default
 		{{ content }}
 		{% include disqus.html %}
 	</div>
-
-	
 </article>
+
+<div id="media-modal" class="media-modal">
+  <span class="media-close" onclick="closeMediaModal()">&times;</span>
+  <img class="media-modal-content" id="media-modal-content">
+  <div id="media-modal-caption"></div>
+</div>
