--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -85,3 +85,82 @@
     justify-content: center;
   }
 }
+
+.media-wrapper {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  margin-bottom: 50px;
+}
+
+.media-item {
+  display: flex;
+  flex-direction: column;
+  height: 200px;
+  overflow: hidden;
+  margin: 10px;
+  position: relative;
+  @include mobile {
+    height: 100px;
+  }
+}
+
+.media-item img {
+  object-fit: cover;
+  height: 200px;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: all .15s ease-in;
+  @include mobile {
+    height: 100px;
+  }
+}
+
+.media-item img:hover {
+  transform: scale(1.2);
+}
+
+.media-item p {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  bottom: 0px;
+  width: 100%;
+  margin: 0;
+  padding: 5px;
+  text-align: center;
+}
+
+.media-modal {
+  display: none;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.9);
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+}
+
+.media-modal img {
+  height: 70%;
+  object-fit: contain;
+}
+
+.media-modal span {
+  position: fixed;
+  right: 30px;
+  color: white;
+  top: 30px;
+  font-size: 30px;
+  cursor: pointer;
+  transition: transform .2s;
+}
+
+.media-modal span:hover {
+  transform: scale(1.2);
+}
