--- a/_layouts/splash.html
+++ b/_layouts/splash.html
@@ -46,7 +46,7 @@
 
       {% include analytics.html %}
     </div>
-    <script src="js/particles.js"></script>
+    <script src="/js/particles.js"></script>
     <script>
       particlesJS.load('particles-js', 'js/particles.json', function() {
         console.log('callback - particles.js config loaded');
