--- a/_layouts/profs.html
+++ b/_layouts/profs.html
@@ -40,5 +40,11 @@
 
     {% include analytics.html %}
   </div>
+  <script src="/js/particles.js"></script>
+  <script>
+    particlesJS.load('particles-js', '/js/particles.json', function() {
+      console.log('callback - particles.js config loaded');
+    });
+  </script>
   </body>
 </html>
