--- a/_sass/_speakers.scss
+++ b/_sass/_speakers.scss
@@ -123,8 +123,12 @@
   font-size: 12px;
   font-weight: bold;
   border-radius: 5px;
+  cursor: pointer;
+  z-index: 2000;
 }
 
 .btn_catcher:hover {
+  color: black !important;
+  background-color: #e8e35b;
   box-shadow: 0 5px 9px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
