--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,7 @@ layout: default
 
 <article class="post">
 	<div class="post-header">
+		<div id="particles-js"></div>
 		<h1>{{ page.title }}</h1>
 		<p class="cover-author">{% if page.venue %}{{ page.venue }}{% else %} by {{ page.author }}{% endif %}</p>
 		<p class="cover-date">{{ page.date | date: "%B %e, %Y" }}</p>
