--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,6 @@ hr {
   width: 100%;
   background-color: #2c2c2c;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  //background-image: linear-gradient(-172deg, #822892, #25675f);
   background-image: url("/images/bg.png");
 }
 
@@ -262,13 +261,16 @@ nav {
   font-family: $font_body;
   font-size: 18px;
   background-color: $accent_700;
-  padding: 10px;
-  padding-bottom: 15px;
   text-align: center;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  z-index: 1000;
 
   @include mobile {
-    float: none;
-    display: block;
     font-size: 16px;
   }
 
@@ -279,8 +281,11 @@ nav {
     letter-spacing: 1px;
     color: #fff;
     font-size: 12px;
-    padding-bottom: 5px;
     transition: all 0.2s cubic-bezier(0.25, 0.8, 0.25, 1);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: 10px;
 
     @include mobile {
       margin: 0 10px;
@@ -288,7 +293,7 @@ nav {
   }
 
   a:hover {
-    border-bottom: 1px solid white;
+    background-color: rgba(0,0,0,0.2);
   }
 }
 
@@ -587,4 +592,28 @@ img.typical-image {
 #particles-js {
   position: absolute;
   width: 100%;
+}
+
+.btn-night-mode {
+  background-image: url("/images/icons/night-mode.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 20px;
+  background-color: transparent;
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  top: 0px;
+  right: 0px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+}
+
+.btn-night-mode:hover {
+  background-color: rgba(0,0,0,0.2);
+}
+
+.btn-night-mode:focus {
+  outline: none;
 }
